--- a/Sandbox/networks/settings.py.save.1
+++ b/Sandbox/networks/settings.py.save.1
@@ -1,4 +1,4 @@
-'''
+ls'''
 
  Inria Chile - Flows In Networks
  
@@ -8,10 +8,8 @@
 
 - Comments :
 
-* Graphs data can be found in the original folder /Flows/examples.py
+* Graphs data can be found in /sim/Flows/examples.py
 * Note: "example1" is not considered in the list (no time data)
-* This version can execute the file "test.py" in the original folder Flows and get the required data for the visualization
-(enabled changes on T_MAX and TIME_STEP)
 
 '''
 
@@ -21,9 +19,9 @@
 #graph = 'example5'
 #graph = 'example_KochSkutella2011_Fig3_Fig4'
 #graph = 'example_simple1'
-#graph = 'example_Fig1_Cominetti' # (visualization demo available)
+graph = 'example_Fig1_Cominetti'
 #graph = 'example_Fig1_Cominetti_variant1'
-graph = 'example_Larre' # (visualization demo available)
+#graph = 'example_Larre'
 #graph = 'example_Larre_bis'
 #graph = 'example_parallelpath'
 
